<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@android:color/white"
        tools:context=".screens.shoedetail.ShoeDetailFragment">

        <TextView
            android:id="@+id/show_detail_form_title"
            style="@style/custom_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_form_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/shoe_detail_form_name_label"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/show_detail_form_title" />

        <EditText
            android:id="@+id/et_field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_detail_form_name_hint"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_name" />

        <TextView
            android:id="@+id/tv_label_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/shoe_detail_form_company_label"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_field_name" />

        <EditText
            android:id="@+id/et_field_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_detail_form_company_hint"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_company" />

        <TextView
            android:id="@+id/tv_label_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_field_company"
            android:layout_marginTop="20dp"
            android:text="@string/shoe_detail_form_size_label"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_field_company" />

        <EditText
            android:id="@+id/et_field_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_label_size"
            android:hint="@string/shoe_detail_form_size_hint"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_size" />

        <TextView
            android:id="@+id/tv_label_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_field_size"
            android:layout_marginTop="20dp"
            android:text="@string/shoe_detail_form_desc_label"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_field_size" />

        <EditText
            android:id="@+id/et_field_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_detail_form_desc_hint"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_desc" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/custom_button_style_bordered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:text="@string/shoe_detail_form_button_cancel"
            app:layout_constraintBaseline_toBaselineOf="@id/btn_save"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_save" />

        <Button
            android:id="@+id/btn_save"
            style="@style/custom_button_style_filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/dimen_20"
            android:background="@drawable/background_cta_primary_filled"
            android:text="@string/shoe_detail_form_button_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_cancel"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>