<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".screens.onboarding.WelcomeFragment">

        <TextView
            android:id="@+id/tv_welcome_title"
            style="@style/custom_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_50"
            android:text="@string/welcome_title" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_welcome_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/ic_inventory_list_24" />

        <TextView
            android:id="@+id/tv_welcome_desc"
            style="@style/custom_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/welcome_desc" />

        <Button
            android:id="@+id/btn_welcome_continue"
            style="@style/custom_button_style_filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="40dp"
            android:text="@string/welcome_button_text"
            android:layout_marginBottom="@dimen/dimen_30"/>

    </RelativeLayout>
</layout>