<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--  Constraint layout is used in this as view's position was
    dependent on parent. For Example, the title was required to be placed
    on top of the screen on the other hand the button was required at bottom of
    parent. In addition to that, the image had to be placed in between
    title and first description and equal distance was maintained with the
    help of constraints-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".screens.onboarding.WelcomeFragment">

        <TextView
            android:id="@+id/tv_instruction_title"
            style="@style/custom_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/instruction_title" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_instruction_title"
            app:layout_constraintBottom_toTopOf="@id/tv_welcome_desc_one"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/ic_instructions_24" />

        <TextView
            android:id="@+id/tv_welcome_desc_one"
            style="@style/custom_desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@string/instruction_desc_one" />

        <TextView
            android:id="@+id/tv_welcome_desc_two"
            style="@style/custom_desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_desc_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/instruction_desc_two" />

        <Button
            android:id="@+id/btn_welcome_continue"
            style="@style/custom_button_style_filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="@dimen/dimen_30"
            android:text="@string/instruction_button_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>