<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="data"
            type="com.udacity.shoestore.SharedViewModel" />
    </data>

    <!-- By Using Constraint layout to implement this design helped in adding views
    with vertical bias in order to position them at certain position between 2 views.
    In addition to that the sign up label and field was easily chained and
    adding in the middle horizontally using app:layout_constraintHorizontal_chainStyle="packed"
   -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".screens.login.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/icon_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/et_field_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_field_email"
            app:srcCompat="@drawable/ic_outline_email_24" />

        <EditText
            android:id="@+id/et_field_email"
            style="@style/CustomEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_30"
            android:text="@={data.email}"
            android:hint="@string/login_form_email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toRightOf="@id/iv_email"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/et_field_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_field_password"
            app:srcCompat="@drawable/ic_outline_password_24" />

        <EditText
            android:id="@+id/et_field_password"
            style="@style/CustomEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_30"
            android:hint="@string/login_form_password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintLeft_toRightOf="@id/iv_password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_field_email" />

        <Button
            android:id="@+id/btn_login"
            style="@style/custom_button_style_filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_field_password"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_5"
            android:background="@drawable/background_cta_primary_filled"
            android:text="@string/login_form_button_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_field_password"
            app:layout_constraintVertical_bias=".4" />

        <TextView
            android:id="@+id/tv_signup_lable"
            style="@style/custom_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:text="@string/login_form_signup_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_signup"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintVertical_bias=".3" />

        <TextView
            android:id="@+id/tv_signup"
            style="@style/custom_desc_text_primary_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10"
            android:text="@string/login_form_signup_text"
            app:layout_constraintBottom_toBottomOf="@id/tv_signup_lable"
            app:layout_constraintLeft_toRightOf="@id/tv_signup_lable"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>